// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrap should render 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Wrap-n3v4au-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";font-family:",
          ";font-size:",
          ";display:flex;width:fit-content;align-items:center;",
        ],
      },
      "displayName": "Wrap",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Wrap-n3v4au-0",
      "target": "label",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`Wrap should render different label positions 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Wrap-n3v4au-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";font-family:",
          ";font-size:",
          ";display:flex;width:fit-content;align-items:center;",
        ],
      },
      "displayName": "Wrap",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Wrap-n3v4au-0",
      "target": "label",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  labelPosition="left"
/>
`;

exports[`Wrap should render different label positions 2`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Wrap-n3v4au-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";font-family:",
          ";font-size:",
          ";display:flex;width:fit-content;align-items:center;",
        ],
      },
      "displayName": "Wrap",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Wrap-n3v4au-0",
      "target": "label",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  labelPosition="right"
/>
`;

exports[`Wrap should render different label positions 3`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Wrap-n3v4au-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";font-family:",
          ";font-size:",
          ";display:flex;width:fit-content;align-items:center;",
        ],
      },
      "displayName": "Wrap",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Wrap-n3v4au-0",
      "target": "label",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  labelPosition="top"
/>
`;

exports[`Wrap should render different label positions 4`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Wrap-n3v4au-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";font-family:",
          ";font-size:",
          ";display:flex;width:fit-content;align-items:center;",
        ],
      },
      "displayName": "Wrap",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Wrap-n3v4au-0",
      "target": "label",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  labelPosition="bottom"
/>
`;
